# spark-connect-local-env

./: Blog.md  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile.spark  devcontainer.json  docker-compose.yml
.devcontainer/conf/: .postCreateCommand.sh  minio_mc-entrypoint.sh  run-spark.sh  spark-defaults.conf
src/: main.py  scratch.py
src/pyspark_delta_no_databricks/: demo1.py
src/spark-connect-local-env/: demo2.py  demo3.py  main.py
src/spark_connect_local_env/: main.py
