[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyspark-delta-no-databricks"
dynamic = ["version"]
description = 'Building a Delta Lake with Spark without Databricks'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pyspark[connect]==3.5.1",
  "delta-spark~=3.1.0",
]

[project.urls]
Documentation = "https://github.com/unknown/pyspark-delta-no-databricks#readme"
Issues = "https://github.com/unknown/pyspark-delta-no-databricks/issues"
Source = "https://github.com/unknown/pyspark-delta-no-databricks"

[tool.hatch.version]
path = "src/pyspark_delta_no_databricks/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pyspark_delta_no_databricks tests}"

[tool.coverage.run]
source_pkgs = ["pyspark_delta_no_databricks", "tests"]
branch = true
parallel = true
omit = [
  "src/pyspark_delta_no_databricks/__about__.py",
]

[tool.coverage.paths]
pyspark_delta_no_databricks = ["src/pyspark_delta_no_databricks", "*/pyspark-delta-no-databricks/src/pyspark_delta_no_databricks"]
tests = ["tests", "*/pyspark-delta-no-databricks/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
